fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -782,15 +782,21 @@ h2.breif-txt {
 /* ================
     PROJECT MAIN PAGE
 =================== */
+.short-project-section {
+    padding: 7vw var(--horizontal) 5vw;
+    overflow: hidden !important;
+    position: relative;
+}
+
 .short-project-section .subtitle {
-    padding: 7vw var(--horizontal) 0;
+    padding-top: 7vw;
 }
 
 .short-project-wrapper {
-    padding: 5vw var(--horizontal);
+    padding-top: 5vw;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 2vw; /* Add a 2vw gap between the two boxes */
+    gap: 2vw;
 }
 .small.project-container {
     background-color: #e8e9eb;
